Fixed bug in add form and got all inputs aligning properly

--- a/forms.css
+++ b/forms.css
@@ -24,6 +24,9 @@
 	margin-top: 10px;
 }
 
+#add-description {
+	width: 90%;
+}
 
 #edit-newnotetext {
 	width: 90%;
